# record-spec

./: .gitignore  .pr_agent.toml  CLAUDE.md  LAUNCH_HN.md  LAUNCH_LINKEDIN.md  LICENSE  README.md  REGULATORY_MAPPING.md  schema.json
.github/workflows/: pr_agent.yml
examples/: aml_triage.json  communication_surveillance_l1.json  credit_limit_increase.json  trade_surveillance_l1.json
record-py/: pyproject.toml
record-py/examples/: demo.py
record-py/record_py/: __init__.py  cli.py  emitter.py  gap_analyzer.py  openinference_adapter.py  validator.py
