[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "record-py"
version = "0.1.0"
description = "Regulatory Evidence Capture of Reasoning and Decisions — Python SDK"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "jsonschema>=4.18",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pip-tools"]

[project.scripts]
record = "record_py.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["record_py*"]
